# LeNet_Monkey_CNN_C

./: .gitignore  CMakeLists.txt
include/: cnn.h
src/: cnn.cpp  main.cpp
